--- a/config/locales/en/application.en.yml
+++ b/config/locales/en/application.en.yml
@@ -1,11 +1,11 @@
 en:
   application:
-    name: Untitled Application
+    name: Saas Rails
     owner: Unidentified Developer
     description: "You can update this description in `config/locales/en/application.en.yml`."
-    keywords: untitled application seo keywords
+    keywords: saas rails seo keywords
     support_email: change.me@localhost
-    key: untitled_application
+    key: saas_rails
   webhooks/outgoing/endpoints:
     fields:
       api_version:
